@@ -132,6 +132,9 @@ if ($verbose) {
 print STDERR "Selected Comics !! : @selected_comics \n" if $extra_verbose;
 
 if ($make_webpage) {
+	# Load all possible alternative themes modules.
+	load_modules("Netcomics::HTML::Themes", @html_theme_dirs);
+
 	# Create the webpage.
 	unless ($separate_comics) {
 		Netcomics::HTML->create_basic_page_set(@rli);
