@@ -7,6 +7,9 @@ my $HOME = $ENV{'HOME'};
 ## Add a directory to the lib dirs
 #unshift(@libdirs,"$HOME/share/netcomics");
 
+## Add a directory to the html_template dirs
+#unshift(@html_theme_dirs, "$HOME/netcomics/Netcomics/HTML/Themes");
+
 ## Create downloaded files with the following permissions (default 0644)
 #$files_mode = 0644;
 
@@ -15,8 +18,8 @@ my $HOME = $ENV{'HOME'};
 ## potentially speeding up netcomics' startup time.
 #$single_rli_file = 1;
 
-## Change the location of the html template directory
-#$html_tmpl_dir = "$HOME/share/netcomics/html_tmpl";
+## The name of the template you wish to use.
+#$html_theme = "Default";
 
 ## Change the download directory location
 #$comics_dir = "$HOME/comics";
